--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ avatar:           /theme/img/profilepic.jpg   # Path to an avatar image
 baseurl: "/"
 
 # Add a directory to hold misc pages, just to keep the root directory clean.
-include: ["_pages", "_portfolio"]
+include: ["_pages", "_portfolio" ,"_projects"]
 
 # Turn the projects into a collection.
 collections:
