--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ include: ["_pages", "_portfolio" ,"_projects"]
 collections:
   projects:
     output: true
-    title: projects
+    title: Projects
     permalink: /:collection/:name.html
   portfolio:
     output: true
